--- a/src/footer/shopMenu/ShopMenu.module.scss
+++ b/src/footer/shopMenu/ShopMenu.module.scss
@@ -1,16 +1,16 @@
-.infoMenu{
+.shopMenu{
     font-size: 14px;
     margin: 40px 0 0 100px;
-    }
-.itemMenu{
+}
+.item{
     padding-top: 5px;
     list-style-type: none;
 }
-.linkMenu{
+.link{
     color: #2F3035;
     text-decoration: none;
 }
-.listMenu{
+.list{
     padding-left: 0;
     text-align: start;
 }
