--- a/src/footer/mailing/Mailing.module.scss
+++ b/src/footer/mailing/Mailing.module.scss
@@ -2,7 +2,7 @@
     color: #2F3035;
     font-size: 14px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     margin: 40px 0 30px 0;
   }
   .btn {
